# Woosh_robot

./: .gitignore  README.md  ReadMe.md  requirements.txt
docker/: Dockerfile  launch.sh  ros-foxy-woosh-robot-agent_0.0.1-0focal_arm64.run
map_generate/: map.yaml  mesh2map_black.py  point2map_black.py  readpoint_height.py
run/: initial_localization.py  obj_nav.sh  run.py  run_with_node.py  system_prompt.txt  system_prompt_0625.txt  system_prompt_0702.txt  test.py
run/Nav2Node/: get_pose_speed.py  move_base.py  step_control.py  stop.py
run/Node/: __init__.py  get_pose_speed.py  init_robot.py  move_base.py  mute.py  set_pose.py  step_control.py
run/map/: map_07_02.yaml
src/: icp.py  map_utils.py  run.py
src/Nav2Node/: __init__.py  basic_nav.py  get_lidar.py  get_pose_speed.py  spin.py  step_control.py  stop.py
src/Node/: __init__.py  get_lidar.py  set_pose.py  step_control.py  stop.py
src/map/: map_07_02.txt  scan_by_robot.yaml
woosh_robot_demo/: CMakeLists.txt
woosh_robot_demo/install/: local_setup.sh  setup.sh
woosh_robot_demo/install/woosh_robot_demo/lib/woosh_robot_demo/: exec_pre_task  exectask  init_robot  movebase_goal  stepctrl
woosh_robot_demo/install/woosh_robot_demo/share/ament_index/resource_index/package_run_dependencies/: woosh_robot_demo
woosh_robot_demo/install/woosh_robot_demo/share/ament_index/resource_index/parent_prefix_path/: woosh_robot_demo
woosh_robot_demo/install/woosh_robot_demo/share/woosh_robot_demo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
woosh_robot_demo/install/woosh_robot_demo/share/woosh_robot_demo/cmake/: woosh_robot_demoConfig.cmake
woosh_robot_demo/log/: latest_build
woosh_robot_demo/src/: exec_pre_task.cpp  exectask.cpp  goto_mark.cpp  init_robot.cpp  monitor.cpp  movebase_goal.cpp  stepctrl.cpp
woosh_robot_demo/src/woosh_msgs-devel/: CHANGELOG.rst  CMakeLists.txt  mybash.sh  package.xml
woosh_robot_demo/src/woosh_msgs-devel/arm_actions/: Arm.action
woosh_robot_demo/src/woosh_msgs-devel/controller_actions/: ChargeControl.action  LiftControl.action  LiftControl2.action  LiftControl3.action  RollerControl.action  SecondPosition.action  StepControl.action  TractorControl.action
woosh_robot_demo/src/woosh_msgs-devel/controller_msgs/: BMS.msg  Battery.msg  Beacon.msg  Beacons.msg  BleStatus.msg  Charge.msg  Follower.msg  IO.msg  IOModule.msg  IOModuleControl.msg  IOs.msg  Information.msg  JoystickConfig.msg  LED.msg  Log.msg  Magnetism.msg  Magnetisms.msg  Manekineko.msg  ModeConfig.msg  Obstacle.msg  Parameter.msg  PeripheralConfig.msg  RFID.msg  RFIDs.msg  Ranges.msg  RfRemoteController.msg  RobotInfo.msg  ScannerStatus.msg  StepControl.msg  Weight.msg  WheelConfig.msg  WooshRosbagRecord1.msg
woosh_robot_demo/src/woosh_msgs-devel/controller_srvs/: DriverFree.srv  SetSafetyField.srv
woosh_robot_demo/src/woosh_msgs-devel/docking_actions/: AutoDock.action  AutoDock2.action
woosh_robot_demo/src/woosh_msgs-devel/follow_srvs/: FollowCtl.srv
woosh_robot_demo/src/woosh_msgs-devel/include/woosh_msgs/: ModuleStatus.h  ModuleStatusApp.h  ModuleStatusElec.h  ModuleStatusEmbed.h  ModuleStatusSys.h
woosh_robot_demo/src/woosh_msgs-devel/map_server/: ArTagPose.msg  ArTags.msg  BidirectPath.msg  DeploymentMarker.msg  DeploymentMarkers.msg  Field.msg  GraphEdge.msg  GraphVertex.msg  MapModifyData.msg  MonoPath.msg  NavFieldPoint.msg  NavFields.msg  NavMode.msg  NavPath.msg  PathInfo.msg  PathesGraph.msg  ReflectorErrorID.msg  ReflectorErrorIDgroup.msg  revise.md
woosh_robot_demo/src/woosh_msgs-devel/nav_actions/: ArTrack.action  ArTrackCharge.action  MoveBase.action  MultiMapNavigation.action  NavigationMode.action  OdomCtrolAvoidObstacle.action  StepCtrlAvoidObstacle.action  TagLocalization.action  revise
woosh_robot_demo/src/woosh_msgs-devel/nav_srvs/: AddReflectors.srv  ArTrackLocate.srv  BeaconList.srv  Deployment.srv  GetRoadMap.srv  InitPose.srv  SaveMap.srv  ScanMatchInfo.srv  SetMapMerge.srv  SetMapServer.srv
woosh_robot_demo/src/woosh_msgs-devel/task_msgs/: RobotStatus.msg
woosh_robot_demo/src/woosh_msgs-devel/task_srvs/: ExecTask.srv
woosh_robot_demo/src/woosh_msgs-devel/wifi_srvs/: AddWiFi.srv  ForgetWiFi.srv  GetAvailableWiFiList.srv  GetLastError.srv  TriggerWiFiReconnect.srv
