<?xml version="1.0"?>
<package format="3">
  <name>woosh_msgs</name>
  <version>1.1.4</version>
  <description>The woosh_msgs package</description>
  
  <license>BSD</license>
  <url type="website">http://www.wooshrobots.com</url>
  <author email="projects@wooshrobots.com">AICRobo</author>
  <maintainer email="fuguohe@wooshrobots.com">Guohe Fu</maintainer>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 添加 build_depend -->
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>

